<resources>
    <string name="app_name">Mobile_Team17</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="datetime_label">Date Time:</string>
    <string name="stock_sticker_label">Stock Sticker:</string>
    <string name="description_label">Description:</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="stock_sticker">Stock Sticker</string>
    <string name="description">Description</string>
    <string name="add_stock">New Stock Idea</string>
    <string name="past_stock">Past Stock List</string>
</resources>
