<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/stock_idea_list_layout_fragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#3288DB">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/date"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20dp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stock_sticker"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20dp"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/description"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20dp"
            />

    </LinearLayout>
    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stock_idea_listview">

    </ListView>
</LinearLayout>